--- a/MediumMenu/Base.lproj/Main.storyboard
+++ b/MediumMenu/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ehn-oQ-HJu">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G3C-60-c3e">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
@@ -21,25 +21,115 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="752" y="-365"/>
+            <point key="canvasLocation" x="1564" y="-365"/>
+        </scene>
+        <!--Home View Controller-->
+        <scene sceneID="wnv-2I-iXW">
+            <objects>
+                <viewController storyboardIdentifier="Home" useStoryboardIdentifierAsRestorationIdentifier="YES" id="yGa-QV-H58" customClass="HomeViewController" customModule="MediumMenu" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ESO-IH-G0p"/>
+                        <viewControllerLayoutGuide type="bottom" id="n9C-n5-ItT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QzM-d1-JwG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PYB-Q6-TJS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2242" y="-365"/>
+        </scene>
+        <!--Top Stories View Controller-->
+        <scene sceneID="Jdr-s7-aXT">
+            <objects>
+                <viewController storyboardIdentifier="Top" id="czV-kc-HPw" customClass="TopStoriesViewController" customModule="MediumMenu" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4Ar-ik-xAW"/>
+                        <viewControllerLayoutGuide type="bottom" id="L4T-Q8-Gsv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="McN-Ai-1gk">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G0A-Gp-RyU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2241" y="296"/>
+        </scene>
+        <!--Bookmarks View Controller-->
+        <scene sceneID="ENl-HM-mcV">
+            <objects>
+                <viewController storyboardIdentifier="Bookmark" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kzq-i0-bk1" customClass="BookmarksViewController" customModule="MediumMenu" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZPZ-VS-KpP"/>
+                        <viewControllerLayoutGuide type="bottom" id="xe1-gm-zzl"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sNg-yL-hib">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iIt-m1-JDt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2241" y="963"/>
+        </scene>
+        <!--Help View Controller-->
+        <scene sceneID="MFH-Bz-n13">
+            <objects>
+                <viewController storyboardIdentifier="Help" useStoryboardIdentifierAsRestorationIdentifier="YES" id="N21-KF-oEh" customClass="HelpViewController" customModule="MediumMenu" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dyg-Aj-mKI"/>
+                        <viewControllerLayoutGuide type="bottom" id="hZB-NK-OUf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cqX-Vg-ZGT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r3k-yK-92e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2240" y="1637"/>
+        </scene>
+        <!--Signout View Controller-->
+        <scene sceneID="3rU-cx-0eM">
+            <objects>
+                <viewController storyboardIdentifier="Signout" useStoryboardIdentifierAsRestorationIdentifier="YES" id="heY-Rb-waE" customClass="SignoutViewController" customModule="MediumMenu" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Fe2-4H-qEi"/>
+                        <viewControllerLayoutGuide type="bottom" id="axx-WP-Wfi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SPX-Xn-WVw">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kRH-93-S1p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2244" y="2341"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="xZw-uS-ukN">
+        <scene sceneID="8PG-SZ-ApC">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="R7i-VZ-tzo" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ehn-oQ-HJu" customClass="NavigationController" customModule="MediumMenu" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="G3C-60-c3e" customClass="NavigationController" customModule="MediumMenu" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HRr-IZ-jsm">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ukj-RZ-35U">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="ASk-aW-hkq"/>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="5Zu-k7-S3r"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Svz-lI-bna" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="56" y="-365"/>
+            <point key="canvasLocation" x="752" y="-365"/>
         </scene>
     </scenes>
 </document>
